# BasicRaytracer

./: .gitignore  CMakeLists.txt  README.md
Assignments/Assignment 1/: Assignment1.sln  Assignment1.vcxproj  Assignment1.vcxproj.filters  readme.txt
Assignments/Assignment 1/raytracer/: light.h  scene.cpp  sphere.cpp
Assignments/Assignment 1/raytracer-binary/: runme.bat
assets/: blue-earth.yaml  custom-scene1.yaml  custom-scene2.yaml  custom-scene3.yaml  custom-scene4.yaml  custom-scene5.yaml  dolphins2.mtl  scene01-camera-ss-reflect-lights-shadows.yaml  scene01-dof-ss-reflect-lights-shadows.yaml  scene01-gooch.yaml  scene01-reflect-lights-shadows.yaml  scene01-ss.yaml  scene01.yaml  suzanne3.mtl
assets/earth/: scene.yaml
assets/eiffel/: asset.yaml  eiffel2.mtl
assets/vion/: plane.mtl
assets/vion-highres/: vion.mtl
assets/vion-lowres/: vion.mtl
src/: Camera.cpp  Camera.hpp  Image.cpp  Image.hpp  Material.hpp  ParseObj.cpp  ParseObj.hpp  Raycast.hpp  Raytracer.cpp  Raytracer.hpp  Scene.cpp  Scene.hpp  box.cpp  box.h  glm.hpp  image.cpp  image.h  light.h  main.cpp  material.h  mesh.cpp  mesh.h  object.h  parseObj.cpp  parseObj.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  triple.h
src/noise/: Simplex.cpp
src/objects/: Box.cpp  Box.hpp  Cloud.cpp  Cloud.hpp  Cylinder.cpp  Cylinder.hpp  Group.cpp  Group.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  Sphere.cpp  Sphere.hpp  TransformNode.cpp  TransformNode.hpp  Triangle.cpp  Triangle.hpp
src/opencl/: Kernel.clcpp
src/vulkan/: Device.cpp  Device.hpp  Pipeline.cpp  Pipeline.hpp  RenderColorSystem.cpp  RenderColorSystem.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp  SwapChain.cpp  SwapChain.hpp  WindowManager.cpp  WindowManager.hpp
